Fixes a potential NPE, because of broken offline players in /homeother tablist